[package]
name = "td"
version = "0.1.0"
edition = "2021"

[lib]
name = "td"
path = "src/lib.rs"

[[bin]]
name = "td"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5.0"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.0"
